test/expected/explain_o_plus_kel.out
struct S; explain int operator+(S, ...)
                          ^
27: error: operator + can not have a variadic parameter
